Separated components unique for About page

--- a/src/components/SectionCommaV1/SectionCommaV1.module.scss
+++ b/src/components/SectionCommaV1/SectionCommaV1.module.scss
@@ -1,4 +1,4 @@
-@import '../../sass/mixins/index';
+@import '@sass/mixins/index';
 
 .section-comma {
   border: 1.5rem solid var(--color-tertiary);
