--- a/src/pages/Service/components/SectionServiceVideo/SectionServiceVideo.module.scss
+++ b/src/pages/Service/components/SectionServiceVideo/SectionServiceVideo.module.scss
@@ -1,4 +1,4 @@
-@import '../../sass/mixins/index';
+@import '@sass/mixins/index';
 
 .modal-button__icon {
   transition: width 0.2s linear, height 0.2s linear;
