--- a/src/pages/Blogs/components/SectionBlogsNews/SectionBlogsNews.module.scss
+++ b/src/pages/Blogs/components/SectionBlogsNews/SectionBlogsNews.module.scss
@@ -2,7 +2,6 @@
 
 .news {
   display: grid;
-  gap: 3rem;
 
   @include padding-y(10rem);
   @include media-query('md') {
@@ -18,6 +17,7 @@
     display: grid;
     gap: 2.7rem;
 
+    @include padding-y($top: 3rem, $bottom: 5.1rem);
     @include media-query('md') {
       grid-template-columns: repeat(2, 1fr);
     }
