--- a/src/components/atoms/PaginationPageLink/PaginationPageLink.module.scss
+++ b/src/components/atoms/PaginationPageLink/PaginationPageLink.module.scss
@@ -14,6 +14,7 @@
 
 .page-link {
   cursor: pointer;
+  transition: background-color 0.3s linear, border 0.3s linear;
 
   @include default-link-styles;
 
